# LastLink

./: CMakeLists.txt  Makefile  README.md  debug.sh  flashall.sh  partitions.csv  sdebug.sh  sdkconfig  sdkconfig.defaults  sdkconfig.wifinode  setup.sh
attic/: flash_file_system.c  flash_file_system.h  services.c  services.h
basement/: sx127x.c
components/axp192/: .gitignore  CMakeLists.txt  (+5 more)
docs/: LastLink Protocol.odt  pinouts.txt
filesystem/: .config
main/: CMakeLists.txt  Kconfig.ftp  Kconfig.nmea  Kconfig.projbuild  Kconfig.radio  Kconfig.sensors  Kconfig.service_names  commands.c  component.mk  configdata.c  crc16.c  default_config.h  duplicate_packets.c  duplicate_sequence.c  expressions.c  frequency_table.c  generate_channel_table.py  gps.c  gps.h  http_templates.c  httpd_server.c  https_server.c  lastlink.c  lastlink_main.c  linklayer.c  linklayer.h  linklayer.not-yet-converted  linklayer_io.c  linklayer_io.h  lsocket.c  mdns_config.c  network_connect.c  nmea_parser.c  nvs_support.c  nvs_support.h  os_freertos.c  os_freertos.h  os_specific.c  packet.c  packet.h  (+21 more)
main/include/: configdata.h  default_config.h  lsocket.h  os_freertos.h  packets.h  radio.h  routes.h  spiffs.h  sx127x_driver.h  wifi_init.h
main/includes/: commands.h  configdata.h  crc16.h  default_config.h  duplicate_packets.h  duplicate_sequence.h  expressions.h  http_templates.h  httpd_server.h  https_server.h  linklayer.h  linklayer_io.h  listops.h  lsocket.h  lsocket_internal.h  mdns_config.h  network_connect.h  os_freertos.h  os_specific.h  packet_window.h  packets.h  power_manager.h  radio.h  routes.h  sensors.h  service_names.h  simpletimer.h  sx126x_driver.h  sx127x_driver.h  tokenize.h  uuid.h  varlist.h
os-specific/: os_freertos.c  os_freertos.h  os_linux.h
spiffs_fs/: .config
(+29 files in other folders)
